<resources>
    <string name="app_name">DexApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pokemon_details_tab_1">Sobre</string>
    <string name="pokemon_details_tab_2">Status Base</string>
    <string name="pokemon_details_tab_3">Evoluções</string>
    <string name="pokemon_details_tab_4">Golpes</string>
    <string name="pokemon_details_tab_5">Habilidades</string>

    <string name="region_details_tab_1">Cidades</string>
    <string name="region_details_tab_2">Jogos</string>

    <string name="about_height_label">Altura</string>
    <string name="about_weight_label">Peso</string>
    <string name="about_training_label">Treinamento</string>
    <string name="about_base_experience_label">XP Base</string>

    <string name="base_stats_hp_label">HP</string>
    <string name="base_stats_attack_label">Ataque</string>
    <string name="base_stats_defense_label">Defense</string>
    <string name="base_stats_special_attack_label">Ataque Esp.</string>
    <string name="base_stats_special_defense_label">Defesa Esp.</string>
    <string name="base_stats_speed_label">Velocidade</string>
    <string name="base_stats_total_label">Total</string>

    <string name="toolbar_favourite_title">Favoridex</string>

    <string name="home_pokedex_title">Pokedex</string>
    <string name="home_favourite_title">Favoridex</string>
    <string name="home_region_title">Regiões</string>

    <string name="pokedex_title">Pokedex</string>
    <string name="region_title">Regiões</string>

    <string name="region_details_location">Cidades</string>

    <string name="pokemon_fam_filter_by">Filtrar...</string>
    <string name="pokemon_fab_all">Todos os Pokemons</string>
    <string name="pokemon_fab_by_generation">Pokemons por Geração</string>
    <string name="pokemon_fab_by_type">Pokemons por Tipo</string>

    <string name="bottom_sheet_generation_label">Geração</string>
    <string name="bottom_sheet_type_label">Tipos</string>
</resources>
