<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".ui.fragments.details.base_stats.BaseStatsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/baseStatsHPLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/base_stats_hp_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/baseStatsHPTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsHPLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsHPLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsHPLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsHPProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsHPLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsHPTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsHPLabelTextView" />

            <TextView
                android:id="@+id/baseStatsAtkLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_attack_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsHPLabelTextView" />

            <TextView
                android:id="@+id/baseStatsAtkTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsAtkLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsAtkLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsAtkLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsAtkProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsAtkLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsAtkTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsAtkLabelTextView" />

            <TextView
                android:id="@+id/baseStatsDefLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_defense_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsAtkLabelTextView" />

            <TextView
                android:id="@+id/baseStatsDefTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsDefLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsDefLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsDefLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsDefProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsDefLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsDefTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsDefLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpAtkLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_special_attack_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsDefLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpAtkTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpAtkLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpAtkLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpAtkLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsSpAtkProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpAtkLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpAtkTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpAtkLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpDefLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_special_defense_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsSpAtkLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpDefTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpDefLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpDefLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpDefLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsSpDefProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpDefLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpDefTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpDefLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpeedLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_speed_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsSpDefLabelTextView" />

            <TextView
                android:id="@+id/baseStatsSpeedTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpeedLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpeedLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpeedLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsSpeedProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsSpeedLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsSpeedTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsSpeedLabelTextView" />

            <TextView
                android:id="@+id/baseStatsTotalLabelTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/base_stats_total_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseStatsSpeedLabelTextView" />

            <TextView
                android:id="@+id/baseStatsTotalTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsTotalLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/baseStatsTotalLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsTotalLabelTextView"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/baseStatsTotalProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:indeterminate="false"
                android:max="600"
                android:progress="43"
                app:layout_constraintBottom_toBottomOf="@+id/baseStatsTotalLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/baseStatsTotalTextView"
                app:layout_constraintTop_toTopOf="@+id/baseStatsTotalLabelTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>